src/test/deca/context/invalid/SansObjet/DeclVar-EQ-int-float-float.deca
// Description:
//    Declaration of a int variable using == operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  3.14; 
    float y = 0.1; 
    int z = 3.14 == 0.1; 
}
